# py_eforms_parser

./: LICENSE  README.md  pyproject.toml
src/py_eforms_parser/objects/: tender.py  types.py
src/py_eforms_parser/parser/: eformsparser.py
tests/py_eforms_parser/parser/: test_eformsparser.py
