[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "py_eforms_parser"
version = "0.0.1"
dependencies  = [
    "defusedxml",
    "pydantic"
]
authors = [
  { name="xXKnightRiderXx", email="12137107+xXKnightRiderXx@users.noreply.github.com " },
]
description = "Python library to parse EFORMS XML files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/xXKnightRiderXx/py_eforms_parser"
Issues = "https://github.com/xXKnightRiderXx/py_eforms_parser/issues"